Mapper class added and Testing started